[tests] Disable erratic tests
Change-Id: Id390bc06b69b3180615568e73b0ff3322b64a36e
JIRA: EE-999

Former-commit-id: 54ecfa51210fc5d3ca398e26d1abd48c3d559328

--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
@@ -37,6 +37,14 @@
                BlueprintName = "pubsdkTests"
                ReferencedContainer = "container:pubsdk.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "CR_DataConsentFunctionalTests">
+               </Test>
+               <Test
+                  Identifier = "CR_DeviceInfoTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
