--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/pubsdk.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/pubsdk.xcscheme
@@ -38,7 +38,8 @@
       </MacroExpansion>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E1F2736C21B5F08D00A2FBFA"
