[Xcode] Let's make tests flakier running in random order 😱❄️
Change-Id: Ia4f501d2fd7f3019f5b7332e347cf2ca4c962e5e

Former-commit-id: cb6100ac913c67561ed2bf44f6b72d98943af83a

--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/pubsdk.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/pubsdk.xcscheme
@@ -39,7 +39,8 @@
       <Testables>
          <TestableReference
             skipped = "NO"
-            parallelizable = "YES">
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E1F2736C21B5F08D00A2FBFA"
