--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PostsubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PostsubmitTests.xcscheme
@@ -38,6 +38,16 @@
                ReferencedContainer = "container:pubsdk.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "462DCA062462C2B800B43A51"
+               BuildableName = "pubsdkITests.xctest"
+               BlueprintName = "pubsdkITests"
+               ReferencedContainer = "container:pubsdk.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
