Disable failing tests due to CDB call
Change-Id: I9921e46313f84b22bb39bcf759c890ae2fb669d6
JIRA: EE-1059

Former-commit-id: ccba6292263893d7269584cf6cda5e4859faa0b0

--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
@@ -42,6 +42,9 @@
                   Identifier = "CRBannerViewTests/testWithRendering">
                </Test>
                <Test
+                  Identifier = "CRInterstitialDelegateTests/testInterstitialWillAndDidAppear">
+               </Test>
+               <Test
                   Identifier = "CRInterstitialTests/testWithRendering">
                </Test>
                <Test
@@ -70,6 +73,12 @@
                </Test>
                <Test
                   Identifier = "CR_WebApiIntegrationTests/testSendValidBidRequest">
+               </Test>
+               <Test
+                  Identifier = "CR_WebApiIntegrationTests/testSendValidBidRequestWithGdprTcf1_1">
+               </Test>
+               <Test
+                  Identifier = "CR_WebApiIntegrationTests/testSendValidBidRequestWithGdprTcf2_0">
                </Test>
             </SkippedTests>
          </TestableReference>
