[Presubmit] Disable flaky CRInterstitialDelegateTests
Change-Id: I092f7e02907865934047c33b0cc2751e615824b3

Former-commit-id: 7cd5967e95bc0cb40dcf7d44a883496cf1785040

--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
@@ -42,6 +42,9 @@
                   Identifier = "CRBannerViewTests/testWithRendering">
                </Test>
                <Test
+                  Identifier = "CRInterstitialDelegateTests">
+               </Test>
+               <Test
                   Identifier = "CRInterstitialDelegateTests/testInterstitialWillAndDidAppear">
                </Test>
                <Test
