[Xcode] Remove useless pubsdk target
Change-Id: I2d90fecd392302907809319ab585fc6f5985d262

Former-commit-id: 2307be073a7fc1452d4eca9e2f0d3dbe495afd95

--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PostsubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PostsubmitTests.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E1F2736321B5F08D00A2FBFA"
-               BuildableName = "pubsdk.framework"
-               BlueprintName = "pubsdk"
+               BlueprintIdentifier = "25BD5B562220D16D004DE311"
+               BuildableName = "CriteoPublisherSdk.framework"
+               BlueprintName = "CriteoPublisherSdk"
                ReferencedContainer = "container:pubsdk.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -74,15 +74,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E1F2736321B5F08D00A2FBFA"
-            BuildableName = "pubsdk.framework"
-            BlueprintName = "pubsdk"
-            ReferencedContainer = "container:pubsdk.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
