[Xcode] Remove unnecessary CR on Xcode default file header
Change-Id: Iefbb3ed4d93affd4e40fa0166ed8c1dc5e129407

Former-commit-id: 1ba2453a3f1384972885d7a37b0217c60199c8ae

--- a/fuji.xcworkspace/xcshareddata/IDETemplateMacros.plist
+++ b/fuji.xcworkspace/xcshareddata/IDETemplateMacros.plist
@@ -8,7 +8,6 @@
 //  ___PACKAGENAME___
 //
 //  Copyright © 2018-___YEAR___ ___ORGANIZATIONNAME___. All rights reserved.
-//
-</string>
+//</string>
 </dict>
 </plist>
