--- a/fuji-test-app.xcworkspace/xcshareddata/IDETemplateMacros.plist
+++ b/fuji-test-app.xcworkspace/xcshareddata/IDETemplateMacros.plist
@@ -8,7 +8,6 @@
 //  ___PACKAGENAME___
 //
 //  Copyright © 2018-___YEAR___ ___ORGANIZATIONNAME___. All rights reserved.
-//
-</string>
+//</string>
 </dict>
 </plist>
