--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PostsubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PostsubmitTests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1120"
+   LastUpgradeVersion = "1140"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -74,6 +74,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "25BD5B562220D16D004DE311"
+            BuildableName = "CriteoPublisherSdk.framework"
+            BlueprintName = "CriteoPublisherSdk"
+            ReferencedContainer = "container:pubsdk.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
