[Tests] Reenable partially DeviceInfoTests on Presubmit
testUserAgent still failing on CI, not reproduced locally.

Change-Id: I543c80131db8a06f806b767844306c0ce0582f84

Former-commit-id: ecd9a9cfffcc482892a8cc48384f72f9de8316ba

--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
@@ -54,7 +54,7 @@
                   Identifier = "CR_DataConsentFunctionalTests">
                </Test>
                <Test
-                  Identifier = "CR_DeviceInfoTests">
+                  Identifier = "CR_DeviceInfoTests/testUserAgent">
                </Test>
                <Test
                   Identifier = "CR_DfpBannerFunctionalTests">
