[cocoapods] Add bundler ruby environment
Cocoapods is a Ruby gem, using bundler to install in a local folder will
allow us not to rely on build-services to install it on Jenkins agents.
That will be also used later to install Fastlane which is also a gem
Also cleanup gitignore a bit.

Change-Id: I0c80af4a47ae63bf2f35d6267bb10195cbd231a2

Former-commit-id: b0a93d7355fe6a1bf7ef00e860e2bfe8134b0262

--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,13 @@ DerivedData
 xcuserdata/
 
 # Build artifacts
-build/
 xcodebuild.log
 
-#Buck
-.buckconfig
-buck-out/
-.buckd/
+# AppCode
 .idea/
+
+# CocoaPods
 Pods/
+
+# Bundler
+vendor
