--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,15 @@ Pods/
 
 # Bundler
 vendor
+
+# fastlane specific
+**/fastlane/report.xml
+
+# deliver temporary files
+**/fastlane/Preview.html
+
+# snapshot generated screenshots
+**/fastlane/screenshots
+
+# scan temporary files
+**/fastlane/test_output
