[Xcode] Rename pubsdkTest target to CriteoPublisherSdkTests
Change-Id: I9d07a4eea05460213a8ca5544c4d5b6be5114277

Former-commit-id: d2a76aa0687f10106fb3cf2587b910aafe286246

--- a/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
+++ b/pubsdk/pubsdk.xcodeproj/xcshareddata/xcschemes/PresubmitTests.xcscheme
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E1F2736C21B5F08D00A2FBFA"
-               BuildableName = "pubsdkTests.xctest"
-               BlueprintName = "pubsdkTests"
+               BuildableName = "CriteoPublisherSdkTests.xctest"
+               BlueprintName = "CriteoPublisherSdkTests"
                ReferencedContainer = "container:pubsdk.xcodeproj">
             </BuildableReference>
          </TestableReference>
