--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,21 +7,42 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
     runs-on: macos-10.15
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Cocoapods install
-      uses: maierj/fastlane-action@v1.4.0
+    - name: Ruby setup
+      uses: actions/setup-ruby@v1
       with:
-        lane: run cocoapods
-        bundle-install-path: 'vendor'
+        ruby-version: 2.6
+
+    - name: Bundle cache
+      uses: actions/cache@v2
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
+    - name: Bundle install
+      run: |
+        gem install bundler
+        bundle config path vendor/bundle
+        bundle install --jobs 4 --retry 3
+
+    - name: Cocoapods cache
+      uses: actions/cache@v2
+      with:
+        path: Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pods-
+    - name: Cocoapods install
+      run: |
+        bundle exec fastlane run cocoapods
 
     - name: Test
-      uses: maierj/fastlane-action@v1.4.0
-      with:
-        lane: test
-        bundle-install-path: 'vendor'
+      run: |
+        bundle exec fastlane test
