--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,8 @@ jobs:
         ./scripts/archive.sh
 
     - name: Publish binaries
-      uses: skx/github-action-publish-binaries@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        args: 'build/output/*.zip'
+        INPUT_ARGS: build/output/*.zip
+      run: |
+        .github/bin/publish-binaries
