--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,10 @@ jobs:
     - name: Test
       run: |
         bundle exec fastlane test
+
+    - name: Tests reports upload
+      uses: actions/upload-artifact@v2
+      if: failure()
+      with:
+        name: tests-reports
+        path: "fastlane/test_output"
