--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,13 @@ jobs:
       run: |
         bundle exec fastlane test
 
+    - name: Tests reports upload
+      uses: actions/upload-artifact@v2
+      if: failure()
+      with:
+        name: tests-reports
+        path: "fastlane/test_output"
+
     # Publish additional steps to test job
     - name: Archive
       run: |
