--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,3 +84,9 @@ jobs:
         prerelease: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Cocoapods push
+      run: |
+        bundle exec fastlane run pod_push
+      env:
+        COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
