--- a/CriteoGoogleAdapter/Sources/CriteoGoogleAdapter/Info.plist
+++ b/CriteoGoogleAdapter/Sources/CriteoGoogleAdapter/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.0.0-alpha1</string>
+	<string>3.9.0-rc1</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 </dict>
