--- a/CriteoPublisherSdk/iTestHostApp/Info.plist
+++ b/CriteoPublisherSdk/iTestHostApp/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.0.0-alpha1</string>
+	<string>3.9.0-rc1</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
