[Release] Handle git ref
refs/tags/3.9.0-rc1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
     # Publish additional steps to test job
     - name: Release
       run: |
-        bundle exec fastlane release version:${{ github.ref }}
+        bundle exec fastlane release ref:${{ github.ref }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
