--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,27 +44,14 @@ jobs:
       run: |
         bundle exec fastlane run cocoapods
 
-    - name: Java setup
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-    - name: WireMock setup
+     # Testing...
+    - name: Archive
       run: |
-        curl https://repo1.maven.org/maven2/com/github/tomakehurst/wiremock-jre8-standalone/2.27.0/wiremock-jre8-standalone-2.27.0.jar -o wiremock.jar -s
-        bundle exec iostrust add ./wiremock/cert/wiremock.crt
-        java -jar wiremock.jar --https-port 9099 --root-dir wiremock --https-keystore wiremock/cert/wiremock.jks --keystore-password password --verbose &
+        ./scripts/archive.sh
 
-    - name: Format check
+    - name: Release
       run: |
-        bundle exec fastlane format_check
-
-    - name: Test
-      run: |
-        bundle exec fastlane test
-
-    - name: Tests reports upload
-      uses: actions/upload-artifact@v2
-      if: failure()
-      with:
-        name: tests-reports
-        path: "fastlane/test_output"
+        bundle exec fastlane release ref:${{ github.ref }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
