[Release] Only trigger on semver tags
https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#filter-pattern-cheat-sheet

--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -2,7 +2,9 @@ name: Test & Release on GitHub
 
 on:
   push:
-    tags: '*'
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
+      - '[0-9]+.[0-9]+.[0-9]+-[a-z]+[0-9]+'
 
 jobs:
   test-and-release:
