--- a/CriteoAdViewer/CriteoAdViewer.xcodeproj/xcshareddata/xcschemes/CriteoAdViewer.xcscheme
+++ b/CriteoAdViewer/CriteoAdViewer.xcodeproj/xcshareddata/xcschemes/CriteoAdViewer.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1150"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4077EBA3218BC48300C41E68"
-               BuildableName = "AdViewer.app"
-               BlueprintName = "AdViewer"
-               ReferencedContainer = "container:AdViewer.xcodeproj">
+               BuildableName = "CriteoAdViewer.app"
+               BlueprintName = "CriteoAdViewer"
+               ReferencedContainer = "container:CriteoAdViewer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -36,27 +36,31 @@
             ReferencedContainer = "container:AdViewer.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:UITests/CriteoAdViewerUITests.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
-            skipped = "NO"
-            testExecutionOrdering = "random">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4077EBBB218BC48400C41E68"
-               BuildableName = "AdViewerTests.xctest"
-               BlueprintName = "AdViewerTests"
-               ReferencedContainer = "container:AdViewer.xcodeproj">
+               BuildableName = "CriteoAdViewerTests.xctest"
+               BlueprintName = "CriteoAdViewerTests"
+               ReferencedContainer = "container:CriteoAdViewer.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO"
-            testExecutionOrdering = "random">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4077EBC6218BC48400C41E68"
-               BuildableName = "AdViewerUITests.xctest"
-               BlueprintName = "AdViewerUITests"
-               ReferencedContainer = "container:AdViewer.xcodeproj">
+               BuildableName = "CriteoAdViewerUITests.xctest"
+               BlueprintName = "CriteoAdViewerUITests"
+               ReferencedContainer = "container:CriteoAdViewer.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -76,9 +80,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4077EBA3218BC48300C41E68"
-            BuildableName = "AdViewer.app"
-            BlueprintName = "AdViewer"
-            ReferencedContainer = "container:AdViewer.xcodeproj">
+            BuildableName = "CriteoAdViewer.app"
+            BlueprintName = "CriteoAdViewer"
+            ReferencedContainer = "container:CriteoAdViewer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -88,16 +92,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4077EBA3218BC48300C41E68"
-            BuildableName = "AdViewer.app"
-            BlueprintName = "AdViewer"
-            ReferencedContainer = "container:AdViewer.xcodeproj">
+            BuildableName = "CriteoAdViewer.app"
+            BlueprintName = "CriteoAdViewer"
+            ReferencedContainer = "container:CriteoAdViewer.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
