--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,12 @@ on:
     branches: '*'
   workflow_dispatch:
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_12.app/Contents/Developer
+
 jobs:
   test:
-    runs-on: macos-10.15
+    runs-on: macos-latest
 
     steps:
     - name: Checkout
