--- a/.github/workflows/release-cocoapods.yml
+++ b/.github/workflows/release-cocoapods.yml
@@ -4,9 +4,12 @@ on:
   release:
     types: [published]
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_12.app/Contents/Developer
+
 jobs:
   release-cocoapods:
-    runs-on: macos-10.15
+    runs-on: macos-latest
 
     steps:
     - name: Checkout
