--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -6,10 +6,13 @@ on:
       - '[0-9]+.[0-9]+.[0-9]+'
       - '[0-9]+.[0-9]+.[0-9]+-[a-z]+[0-9]+'
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_12.app/Contents/Developer
+
 jobs:
   test-and-release:
     # Clone of main test workflow
-    runs-on: macos-10.15
+    runs-on: macos-latest
 
     steps:
     - name: Checkout
