[livebid] Standalone test plan
Used to start standalone only tests manually

--- a/CriteoPublisherSdk/CriteoPublisherSdk.xcodeproj/xcshareddata/xcschemes/CriteoPublisherSdk.xcscheme
+++ b/CriteoPublisherSdk/CriteoPublisherSdk.xcodeproj/xcshareddata/xcschemes/CriteoPublisherSdk.xcscheme
@@ -32,6 +32,9 @@
             reference = "container:Tests/CriteoPublisherSdk.xctestplan"
             default = "YES">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Tests/CriteoPublisherSdk-Standalone.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
