[Xcode] Make AdViewer profilable

--- a/CriteoAdViewer/CriteoAdViewer.xcodeproj/xcshareddata/xcschemes/CriteoAdViewer.xcscheme
+++ b/CriteoAdViewer/CriteoAdViewer.xcodeproj/xcshareddata/xcschemes/CriteoAdViewer.xcscheme
@@ -83,7 +83,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4077EBA3218BC48300C41E68"
@@ -91,7 +92,7 @@
             BlueprintName = "CriteoAdViewer"
             ReferencedContainer = "container:CriteoAdViewer.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
