--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -55,7 +55,7 @@ jobs:
       run: |
         curl https://repo1.maven.org/maven2/com/github/tomakehurst/wiremock-jre8-standalone/2.27.0/wiremock-jre8-standalone-2.27.0.jar -o wiremock.jar -s
         bundle exec iostrust add ./wiremock/cert/wiremock.crt
-        java -jar wiremock.jar --https-port 9099 --root-dir wiremock --https-keystore wiremock/cert/wiremock.jks --keystore-password password --verbose &
+        java -jar wiremock.jar --https-port 9099 --root-dir wiremock --https-keystore wiremock/cert/wiremock.jks --keystore-password password --verbose --global-response-templating &
 
     - name: Format check
       run: |
