--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -7,12 +7,12 @@ on:
       - '[0-9]+.[0-9]+.[0-9]+-[a-z]+[0-9]+'
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_12.1.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
 
 jobs:
   test-and-release:
     # Clone of main test workflow
-    runs-on: macos-latest
+    runs-on: macos-11.0
 
     steps:
     - name: Checkout
