--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,11 @@ on:
   workflow_dispatch:
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_12.1.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: macos-11.0
 
     steps:
     - name: Checkout
