[Logging] -CriteoPublisherSdkVerboseLogs Launch argument
JIRA: EE-1345

--- a/CriteoAdViewer/CriteoAdViewer.xcodeproj/xcshareddata/xcschemes/CriteoAdViewer.xcscheme
+++ b/CriteoAdViewer/CriteoAdViewer.xcodeproj/xcshareddata/xcschemes/CriteoAdViewer.xcscheme
@@ -76,6 +76,12 @@
             ReferencedContainer = "container:CriteoAdViewer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-CriteoPublisherSdkVerboseLogs"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
