--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -81,7 +81,4 @@ jobs:
         run: |
           bundle exec fastlane release_github ref:${{ github.ref }}
         env:
-          # Fastlane does not support GITHUB_TOKEN for now:
-          # https://github.com/fastlane/fastlane/issues/16618
-          # FL_GITHUB_RELEASE_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FL_GITHUB_RELEASE_API_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          FL_GITHUB_RELEASE_API_BEARER: ${{ secrets.GITHUB_TOKEN }}
