[Actions] Fix test on PR
Also run tests on feature push

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,10 @@ name: Test
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - feature/*
   pull_request:
-    branches: [ '*' ]
   workflow_dispatch:
 
 env:
