[actions] Switch to macos-latest (10.15)
As macos-11.0 has long queue times

--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   test-and-release:
     # Clone of main test workflow
-    runs-on: macos-11.0
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
