[AdViewer] AppTrackingTransparency support
JIRA: EE-1409

--- a/CriteoAdViewer/Sources/Info.plist
+++ b/CriteoAdViewer/Sources/Info.plist
@@ -80,5 +80,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>Your data will be used to deliver personalized ads to you.</string>
 </dict>
 </plist>
