[Xcode] Add Google test plan
To narrow testing on google integration

--- a/CriteoPublisherSdk/CriteoPublisherSdk.xcodeproj/xcshareddata/xcschemes/CriteoPublisherSdk.xcscheme
+++ b/CriteoPublisherSdk/CriteoPublisherSdk.xcodeproj/xcshareddata/xcschemes/CriteoPublisherSdk.xcscheme
@@ -35,6 +35,9 @@
          <TestPlanReference
             reference = "container:Tests/CriteoPublisherSdk-Standalone.xctestplan">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Tests/CriteoPublisherSdk-Google.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
