--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -18,23 +18,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Ruby setup
-        uses: actions/setup-ruby@v1
+      - name: Ruby & Bundle setup
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
-
-      - name: Bundle cache
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      - name: Bundle install
-        run: |
-          gem install bundler
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+          bundler-cache: true
 
       - name: Cocoapods cache
         uses: actions/cache@v2
