--- a/.github/workflows/release-cocoapods.yml
+++ b/.github/workflows/release-cocoapods.yml
@@ -5,11 +5,11 @@ on:
     types: [ published ]
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
 
 jobs:
   release-cocoapods:
-    runs-on: macos-latest
+    runs-on: macos-11
 
     steps:
       - name: Checkout
