--- a/CriteoPublisherSdk/CriteoPublisherSdk.xcodeproj/xcshareddata/xcschemes/CriteoPublisherSdk.xcscheme
+++ b/CriteoPublisherSdk/CriteoPublisherSdk.xcodeproj/xcshareddata/xcschemes/CriteoPublisherSdk.xcscheme
@@ -38,6 +38,9 @@
          <TestPlanReference
             reference = "container:Tests/CriteoPublisherSdk-Google.xctestplan">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Tests/CriteoPublisherSdk-Functional.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
