feat(DPP-3646): ♻️ adjusted code per code review
Adjusted code as per review request

--- a/wiremock/mappings/inapp-v2.json
+++ b/wiremock/mappings/inapp-v2.json
@@ -1,6 +1,11 @@
 {
     "request": {
-        "urlPath": "/inapp/v2"
+        "urlPath": "/inapp/v2",
+        "bodyPatterns": [ {
+ "equalToJson": "{ \"slots\" : [ { \"rewarded\" : true } ] }",
+ "ignoreArrayOrder": true,
+"ignoreExtraElements": true
+}]
     },
     "response": {
         "jsonBody": {
