--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,14 +32,17 @@ jobs:
           key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pods-
+
       - name: Cocoapods install
         run: |
           bundle exec fastlane run cocoapods
 
-      - name: Java setup
-        uses: actions/setup-java@v1
+      - name: Setup Java 11
+        uses: actions/setup-java@v2
         with:
+          distribution: 'temurin'
           java-version: '11'
+
       - name: WireMock setup
         run: |
           curl https://repo1.maven.org/maven2/com/github/tomakehurst/wiremock-jre8-standalone/2.27.0/wiremock-jre8-standalone-2.27.0.jar -o wiremock.jar -s
