--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,9 +1,5 @@
 disabled_rules:
-  # Disable swift-format overlapping rules
-  # We prefer to favor swift-format as swift.org official formatter
-  - opening_brace
-  - trailing_comma
-  # Other rules
-  - identifier_name
-  - type_name
-
+  - line_length # Violated because it can be enabled on-demand from Xcode > Preferences > Text Editing > Wrap lines to editor width
+  - syntactic_sugar # Violated because Dictionary<AnyHashable, String> is easier to read than [AnyHashable:String]
+  - type_name # Violated by class names with underline, like CR_FeedbackStorageTests
+  - vertical_whitespace # Violated by 2-empty line spacing before protocol conformances, MARK, FIXME
