--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Test
         run: |
-          bundle exec fastlane test
+          bundle exec fastlane flaky_test
 
       - name: Tests reports upload
         uses: actions/upload-artifact@v3
@@ -63,3 +63,50 @@ jobs:
         with:
           name: tests-reports
           path: "fastlane/test_output"
+
+integration-test:
+    runs-on: macos-latest
+    needs:
+      - lint
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Ruby & Bundle setup
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6
+          bundler-cache: true
+
+      - name: Cocoapods cache
+        uses: actions/cache@v2
+        with:
+          path: Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+      - name: Cocoapods install
+        run: |
+          bundle exec fastlane run cocoapods
+
+      - name: Java setup
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
+      - name: WireMock setup
+        run: |
+          curl https://repo1.maven.org/maven2/com/github/tomakehurst/wiremock-jre8-standalone/2.27.0/wiremock-jre8-standalone-2.27.0.jar -o wiremock.jar -s
+          java -jar wiremock.jar --https-port 9099 --root-dir wiremock --https-keystore wiremock/cert/wiremock.jks --keystore-password password --verbose --global-response-templating &
+
+      - name: Test
+        run: |
+          bundle exec fastlane it_test
+
+      - name: Tests reports upload
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: functional-tests-reports
+          path: |
+            fastlane/functional_output
